style.css
:root {
  --menu-height: 100px;
}

html, body {
  margin: 0;
  padding: 0;
  background: black;
  color: #aaa;
  font-family: sans-serif;
}

*:link, *:visited {
  color: white;
}

.main {
  width: calc(100vw - (100vw - 100%)); /* 100% - scrollbar */
  height: 100vh;
  font-size: 2em;
}

button {
  font-size: 1em;
}

.tab .content {
  justify-items: center;
  max-height: calc(100% - var(--menu-height));
  overflow: auto;
}

.tab-player .content {
  grid-gap: 10px;
  grid-template-columns: 1fr auto;
  grid-template-rows: auto 1fr;
  justify-items: stretch;
}

.player {
  grid-column: 1;
  grid-row: 1 / 3;
}

#playlist {
  grid-column: 2;
  grid-row: 2;
  max-height: 100%;
  overflow-x: hidden;
  overflow-y: auto;

  margin-top: 1em;
}

#playlist ul {
  padding-left: 0;
  max-width: 380px;
}

#playlist li {
  list-style: none;
  display: flex;
  align-items: center;
  margin-bottom: 10px;
}

#playlist img {
  flex-grow: 1;
}

.scanner {
  grid-column: 2;
  grid-row: 1;

  position: relative;
}

.scanner video {
  max-width: 400px;
  max-height: 300px;
}


@keyframes scanner {
  from { background-position: center -10%; }
  to { background-position: center 100%; }
}

.scanner::after {
  content: "";
  position: absolute;
  min-width: 100%;
  min-height: 100%;
  left: 0;
  top: 0;

  animation: scanner 3s linear infinite;
  background-size: 100% 5px;
  background-image: linear-gradient(0deg, red 3px, transparent 3px);
  background-position: center 95%;
  background-repeat: no-repeat;
}

@keyframes flash {
 from { background-color: #ffffffff; }
 to { background-color: #ffffff00); }
}

.flash {
  position: relative;
}

.flash::after {
  content: "";
  position: absolute;
  top: 0; bottom: 0; left: 0; right: 0;
  animation: flash ease-out 1s;
}

.tab-print form {
  margin-left: 2em;
  margin-right: 2em;
  padding: 0.5em;
  background-color: white;

  display: grid;
  justify-items: center;
  grid-gap: 10px;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr 1fr;
}

.tab-print form > div {
  padding: 0.5em;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.tab-print form > .valid {
  border: solid 1px black;
  border-radius: 10px;
}

.tab-print form > div > div {
  flex-grow: 1;
  text-align: center;
}

/* <Tabs> */
/* https://css-tricks.com/functional-css-tabs-revisited/ */
.tabs {
  position: relative;
  clear: both;
}
.tab {
  display: table-cell;
  vertical-align: middle;
}
.tab label {
  padding: 0.5em;
  line-height: 2.0;
  color: white;
}

.content {
  position: absolute;
  top: var(--menu-height);
  left: 0;
  right: 0;
}

.tab [type=radio] {
  display: none;
}

.tab [type=radio] ~ .content {
  display: none;
}

.tab [type=radio]:checked ~ .content {
  display: grid;
}

[type=radio]:checked ~ label {
  background: white;
  color: black;
}

.tab label:hover {
  cursor: pointer;
  text-decoration: underline;
}

[type=radio]:checked ~ label:hover {
  text-decoration: none;
}
/* </Tabs> */


/*
 * Print stylesheet.
 */
@media print {
  .tab label, #btn-print {
    display: none;
  }

  .tab-print .content {
    top: 0;
  }

  .tab-print form {
    margin: 0;
  }

  .tab-print form input {
    display: none;
  }
}

